# AIBT_verifNN

./: README.md  pyproject.toml
aibt_fm/: __init__.py
aibt_fm/utils/: __init__.py  utils_verification.py  utils_visualisation.py
notebook/: NeuralNetworkVerificationNotebook.ipynb  VerificationNotebook.ipynb
